Se agrego index2 y se modifico index.html

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     </div>
                     <div class="tipoProductos__item  tipo-sillas">
                         <img src="./media/silla-del-comedor.png" alt="" class="imagenTipoProductos">
-                        <p class="descripcionTipoProductos">Sillas de plastic o de salon</p>
+                        <p class="descripcionTipoProductos">Sillas de plastico o de salon</p>
                     </div>
                     <div class="tipoProductos__item  tipo-mesas">
                         <img src="./media/mesa-redonda.png" alt="" class="imagenTipoProductos">
