--- a/index3.html
+++ b/index3.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia placeat, amet dicta fugit voluptate rem at consequatur qui corrupti, earum architecto possimus maiores debitis adipisci reiciendis, accusamus expedita porro similique!</p>
+    <p>Lorem ipsum sit amet consectetur adipisicing elit. Mollitia placeat, amet dicta fugit voluptate rem at consequatur qui corrupti, earum architecto possimus maiores debitis adipisci reiciendis, accusamus expedita porro similique!</p>
 </body>
 </html>
